<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/graylight"
    android:orientation="vertical">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="405dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="350dp"
          android:layout_alignParentStart="true"
          android:layout_alignParentTop="true"
          android:background="@color/startblue"
          android:orientation="vertical">

          <ImageView
              android:layout_width="150dp"
              android:layout_height="150dp"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="45dp"
              android:src="@drawable/myprofile" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="10dp"
              android:text="@string/myname"
              android:textColor="@color/colorPrimaryDark"
              android:textSize="21dp"
              android:textStyle="bold" />
      </LinearLayout>
      <android.support.v7.widget.CardView
          android:layout_width="320dp"
          android:layout_height="110dp"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="275dp"
          app:cardUseCompatPadding="true"
          app:cardCornerRadius="10dp"
          app:cardMaxElevation="5dp"
          >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="3"
              android:orientation="horizontal">
              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:gravity="center">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/photos"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="125"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:paddingTop="10dp"
                      android:textColor="@color/startblue"/>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:gravity="center">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/followers"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="198"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:paddingTop="10dp"
                      android:textColor="@color/startblue"/>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:gravity="center">
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/following"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="5"
                      android:textStyle="bold"
                      android:textSize="20sp"
                      android:paddingTop="10dp"
                      android:textColor="@color/startblue"/>
              </LinearLayout>
          </LinearLayout>


      </android.support.v7.widget.CardView>
  </RelativeLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <TextView
                android:gravity="center_vertical"
                android:textColorHighlight="@color/startblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myemail"
                android:paddingLeft="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_phone_android_black_24dp"/>
            <TextView
                android:gravity="center_vertical"
                android:textColorHighlight="@color/startblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobno"
                android:paddingLeft="20dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_group_add_black_24dp"/>
            <TextView
                android:gravity="center_vertical"
                android:textColorHighlight="@color/startblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addtogroup"
                android:paddingLeft="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_forum_black_24dp"/>
            <TextView
                android:gravity="center_vertical"
                android:textColorHighlight="@color/startblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showallcomments"
                android:paddingLeft="20dp"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>